# UNCASE

./: .dockerignore  .env.example  .gitignore  AUDITORIA_TECNICA_OBJETIVA_V1.md  AUDITORIA_UNCASE_V1.md  AUDIT_REPORT_UNCASE.md  BLOCKCHAIN_AUDIT_REPORT.md  CERTIFICACION_UNCASE_V1_MASTER.md  CERTIFICADO_AUDITORIA_UNCASE_V1.md  CERTIFICADO_ESTRATEGICO_UNCASE_V1.md  CLAUDE.md  Dockerfile  Makefile  PROMPT_DESARROLLO_UNCASE_V2.md  PROMPT_PRO_GRADE_V2.md  README.md  UNCASE_LinkedIn_ES_v1.0.md  UNCASE_MediumPost_v1.0.md  UNCASE_Progress_v1.0.md  alembic.ini  deploy.sh  docker-compose.yml  entrypoint.sh  generate_audit_pdf.py  generate_audit_report_final.py  generate_certificate.py  generate_master_certificate.py  generate_objective_pdf.py  pyproject.toml  railway.toml  script-text.md
.githooks/: post-commit
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_evaluation_reports.py  0003_llm_providers.py  0004_usage_metering.py  0005_knowledge_base.py  0006_webhooks.py  0007_background_jobs.py  0008_audit_logs.py  0009_tools_plugins_templates.py  0010_conversations.py  0011_tool_call_validity.py  0012_seed_rating_run_tracking.py  0013_seed_scenarios.py  0014_blockchain_audit_trail.py  0015_users_and_memberships.py  0016_fix_integrity_issues.py  0017_auth_hardening.py
contracts/: UNCASEAuditAnchor.sol
docs/: api-reference.md  architecture.md  checklist_validacion.md  configuration.md  development.md  features.md  investor-readiness-analysis.md  plan_de_desarrollo.md  prompt_reproducibilidad.md  video-script.md
docs/blog/: layer-0-4-implementation-results.md
docs/guides/: polygon-setup.en.md  polygon-setup.es.md
docs/whitepaper/: UNCASE_Whitepaper_v2.tex
examples/automotive_sales/: sample_seeds.json
frontend/: .dockerignore  .env.example  .prettierrc.json  Dockerfile  README.md  components.json  documentation.html  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  railway.toml
monitoring/prometheus/: prometheus.yml
scripts/: demo-overview-landing-en.md  demo-overview-landing-es.md  demo-video-dashboard-walkthrough.md  demo-video-script-es.md  demo-video-script.md  deploy_finetuned.sh  deploy_together_14b.sh  deploy_together_v11.sh  doc-agent.py  generate-homebrew-formula.py  generate_business_proposal.py  generate_features_clean.py  generate_features_fix_patterns.py  generate_features_seeds.py  generate_features_structures.py  generate_features_valiate_tool_calls.py  generate_features_validate_tools.py  setup_global_v10.sh  start_14b.sh  train_v9.sh  uncase_prepare_dataset.py  uncase_train_apple.sh  uncase_train_gpu.sh  uncase_train_worker.py  vast_start_14b.sh  vast_start_32b.sh
shadcn-nextjs-flow-landing-page-1.0.0/: .env.example  CHANGELOG.md  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
tests/: conftest.py  factories.py
tests/fixtures/: sample.csv  sample_openai.jsonl  sample_sharegpt.jsonl  sample_uncase.jsonl
tests/integration/: test_api_audit.py  test_api_auth.py  test_api_connectors.py  test_api_evaluations.py  test_api_gateway.py  test_api_generation.py  test_api_health.py  test_api_imports.py  test_api_jobs.py  test_api_knowledge.py  test_api_layer0.py  test_api_organizations.py  test_api_plugins.py  test_api_providers.py  test_api_sandbox.py  test_api_seeds.py  test_api_templates.py  test_api_tools.py  test_api_usage.py  test_auth_enforcement.py  test_e2e_pipeline.py
tests/privacy/: test_no_real_data.py  test_pii_scanner.py
tests/unit/: test_audit_service.py  test_auth_jwt.py  test_compliance_profiles.py  test_config.py  test_conversation_service.py  test_cost_tracking.py  test_e2b_webhooks.py  test_exceptions.py  test_generator_service.py  test_job_model.py  test_job_service.py  test_json_parser.py  test_knowledge_service.py  test_memorization_metric.py  test_metrics_middleware.py  test_organization_service.py  test_password_complexity.py  test_pipeline_orchestrator.py  test_plugin_service.py  test_production_config.py  test_provider_service.py  test_rate_limit.py  test_retention_service.py  test_sdk_client.py  test_sdk_components.py  test_security.py  test_security_headers_middleware.py  test_seed_finance_schema.py  test_seed_medical_schema.py  test_seed_packages.py  test_seed_service.py  test_template_service.py  test_tool_service.py  test_usage_service.py  test_webhook_service.py
uncase/: __init__.py  __main__.py  _version.py  config.py  exceptions.py  logging.py
uncase/api/: __init__.py  deps.py  main.py  metering.py  metrics.py  middleware.py  rate_limit.py  security_headers.py  session_store.py
uncase/cli/: __init__.py  evaluate.py  import_cmd.py  pipeline.py  seed.py  template.py  tool.py
uncase/connectors/: __init__.py  base.py  huggingface.py  webhook.py  whatsapp.py
uncase/core/: __init__.py  pipeline_orchestrator.py
uncase/db/: __init__.py  base.py  engine.py  seed_data.py
uncase/domains/: __init__.py  base.py
uncase/i18n/: __init__.py  en.json  es.json
uncase/mcp/: __init__.py  server.py
uncase/plugins/: __init__.py  _catalog.py  registry.py  schemas.py
uncase/sandbox/: __init__.py  demo.py  e2b_client.py  exporter.py  opik_runner.py  schemas.py  template_builder.py  worker.py
uncase/schemas/: __init__.py  blockchain.py  connector.py  conversation.py  conversation_api.py  custom_tool.py  e2b_webhook.py  evaluation.py  generation.py  import_result.py  installed_plugin.py  knowledge.py  layer0_api.py  organization.py  provider.py  quality.py  scenario.py  seed.py  seed_api.py  template.py  template_config.py  usage.py  user.py  validation.py  webhook.py
uncase/sdk/: __init__.py  client.py  components.py  pipeline.py
uncase/services/: __init__.py  audit.py  auth.py  blockchain.py  conversation.py  cost_tracking.py  evaluator.py  generator.py  jobs.py  knowledge.py  organization.py  plugin_service.py  provider.py  retention.py  seed.py  template_service.py  tool_service.py  usage.py  user.py  webhook.py
uncase/templates/: __init__.py  alpaca.py  base.py  chatml.py  harmony.py  llama.py  minimax.py  (+5 more)
(+466 files in other folders)
