[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uncase"
dynamic = ["version"]
description = "UNCASE — Framework open-source para generar datos conversacionales sintéticos de alta calidad para fine-tuning de LoRA/QLoRA en industrias reguladas."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "UNCASE Contributors" }]
keywords = ["synthetic-data", "fine-tuning", "lora", "qlora", "conversational-ai", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
    "litellm>=1.55.0,<2.0",
    "google-generativeai>=0.8.0,<1.0",
    "structlog>=24.4.0,<26.0",
    "typer>=0.15.0,<1.0",
    "httpx>=0.28.0,<1.0",
    "asyncpg>=0.30.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "alembic>=1.14.0,<2.0",
    "rich>=13.9.0,<14.0",
    "tenacity>=9.0.0,<10.0",
    "python-dotenv>=1.0.0,<2.0",
    "anthropic>=0.42.0,<1.0",
    "instructor>=1.7.0,<2.0",
    "argon2-cffi>=23.1.0,<24.0",
    "cryptography>=43.0.0,<45.0",
    "fastmcp>=2.0.0,<3.0",
    "pyjwt>=2.9.0,<3.0",
    "redis>=5.0.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-cov>=6.0.0,<7.0",
    "ruff>=0.8.0,<1.0",
    "mypy>=1.13.0,<2.0",
    "factory-boy>=3.3.0,<4.0",
    "pre-commit>=4.0.0,<5.0",
    "httpx>=0.28.0,<1.0",
    "anthropic>=0.42.0,<1.0",
    "aiosqlite>=0.20.0,<1.0",
]
ml = [
    "transformers>=4.47.0,<5.0",
    "peft>=0.14.0,<1.0",
    "trl>=0.12.0,<1.0",
    "torch>=2.5.0,<3.0",
    "mlflow>=2.19.0,<3.0",
    "accelerate>=1.2.0,<2.0",
    "bitsandbytes>=0.45.0,<1.0",
    "rouge-score>=0.1.2,<1.0",
    "datasets>=3.2.0,<4.0",
]
privacy = [
    "spacy>=3.8.0,<4.0",
    "presidio-analyzer>=2.2.0,<3.0",
    "presidio-anonymizer>=2.2.0,<3.0",
]
sandbox = [
    "e2b>=1.0.0,<2.0",
    "e2b-code-interpreter>=1.0.0,<2.0",
]
evaluation = [
    "opik>=1.0.0,<2.0",
]
blockchain = [
    "web3>=7.0.0,<8.0",
    "eth-account>=0.13.0,<1.0",
]
all = ["uncase[dev,ml,privacy,sandbox,evaluation,blockchain]"]

[project.scripts]
uncase = "uncase.cli:app"

[project.urls]
Homepage = "https://github.com/uncase-ai/uncase"
Documentation = "https://uncase.ai/docs"
Repository = "https://github.com/uncase-ai/uncase"
Issues = "https://github.com/uncase-ai/uncase/issues"

# --- Hatch ---

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.targets.wheel]
packages = ["uncase"]

[tool.hatch.build.targets.sdist]
include = ["uncase/", "README.md", "LICENSE"]

# --- Ruff ---

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "S",     # bandit (seguridad)
    "B",     # bugbear
    "A",     # builtins shadowing
    "C4",    # comprehensions
    "DTZ",   # datetime
    "T20",   # no print()
    "SIM",   # simplify
    "TCH",   # type-checking imports
    "RUF",   # ruff-specific
]
ignore = [
    "S101",  # assert permitido en tests
    "S104",  # bind 0.0.0.0 permitido en contenedores
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "T20"]
"scripts/**/*.py" = ["S603", "S607", "T20"]
"uncase/cli/**/*.py" = ["B008", "TC003"]
"uncase/config.py" = ["S105"]
"uncase/sandbox/worker.py" = ["T20"]
"uncase/sandbox/template_builder.py" = ["T20"]
"uncase/sandbox/demo.py" = ["S104"]
"uncase/core/parser/base.py" = ["A002"]
"uncase/api/deps.py" = ["TC001", "TC002", "TC003"]
"uncase/api/routers/*.py" = ["TC001", "TC002", "TC003"]
"uncase/schemas/organization.py" = ["TC003"]
"uncase/schemas/provider.py" = ["TC003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- mypy ---

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "mlflow.*",
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
    "spacy.*",
    "trl.*",
    "peft.*",
    "transformers.*",
    "accelerate.*",
    "bitsandbytes.*",
    "rouge_score.*",
    "fastmcp.*",
    "e2b.*",
    "e2b_code_interpreter.*",
    "opik.*",
    "datasets.*",
    "opacus.*",
    "torch.*",
    "jwt.*",
    "web3.*",
    "eth_account.*",
]
ignore_missing_imports = true

# --- pytest ---

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=uncase",
    "--cov-report=term-missing",
]
markers = [
    "slow: tests que tardan más de 10s",
    "privacy: tests de privacidad (obligatorios antes de PR)",
    "integration: tests de integración",
    "ml: tests que requieren GPU o modelos grandes",
    "e2e: end-to-end tests with real LLM calls (requires API key)",
]

# --- coverage ---

[tool.coverage.run]
source = ["uncase"]
omit = [
    "tests/*",
    "uncase/_version.py",
    "uncase/core/*/base.py",
    "uncase/core/*/__init__.py",
    "uncase/cli/*",
    "uncase/domains/*",
    "uncase/i18n/*",
    "uncase/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
]
